--- a/site-to-attack/index.html
+++ b/site-to-attack/index.html
@@ -7,14 +7,14 @@
     <title>SiteWreck</title>
     <meta name="description" content="This Site Is Gotta Go">
     <meta name="keywords" content="HTML, CSS, JavaScript, Scrap">
-    <meta name="author" content="Mhkh-Mhkh431@gmail.com">
+    <meta name="author" content="Mhkh-test@loli.io">
 </head>
 
 <body>
     test
-    <h1>Mhkh431@gmail.com</h1>
-    <p>Mhkh431@gmail.com</p>
-    Mhkh431@gmail.com
+    <h1>test@loli.io</h1>
+    <p>test@loli.io</p>
+    test@loli.io
     <a href="/json">Json</a>
     <a href="/json2">Json</a>
     <a href="/mock_json">Mock Json</a>
