--- a/site-to-attack/index.html
+++ b/site-to-attack/index.html
@@ -12,7 +12,9 @@
 
 <body>
     test
-    <h1>test@loli.io</h1>
+    <h1>alireza.smal@gmail.com
+    </h1>
+    <h1>mhkh314@gmail.com</h1>
     <p>test@loli.io</p>
     test@loli.io
     <a href="/json">Json</a>
